--- a/src/app/img-card/img-card.component.html
+++ b/src/app/img-card/img-card.component.html
@@ -5,7 +5,7 @@
       (click)="generateSrc()"
       mat-button 
       mat-raised-button>
-      Give me another cat
+      another cat
     </button>
   </mat-card-actions>
   <img 
